--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@
 DB_NAME=expense
 DB_USER=admin
 DB_PASSWORD=harrywedshpd
+DB_DIALECT=mysql
 DB_HOST=database-1.c76uskew0vbg.ap-southeast-2.rds.amazonaws.com
 
 # API Keys
